--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name":"yklhaoyun/lunzi",
+    "name":"yklhaoyun/test01",
     "description":"kunlun first tool",
     "type":"library",
     "license":"MIT",
